--- a/.github/workflows/update-screenshots.yml
+++ b/.github/workflows/update-screenshots.yml
@@ -5,6 +5,8 @@ on:
 
 jobs:
   update-screenshots:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     steps:
       - name: checkout
